--- a/README
+++ b/README
@@ -1,13 +1,19 @@
 # bram-peper-die-over-mijn-tenen-fietst-op-de-oude-binnenweg
 
+# bram peper
 https://en.wikipedia.org/wiki/Bram_Peper
 
+# anti-social behaviour
 https://en.wikipedia.org/wiki/Anti-social_behaviour
 
+# fuets
 https://nl.wikipedia.org/wiki/Fiets
 
+# voetpad
 https://nl.wikipedia.org/wiki/Voetpad
 
+# voet
 https://nl.wikipedia.org/wiki/Voet_(anatomie)
 
+# binnenweg
 https://nl.wikipedia.org/wiki/Binnenweg_(Rotterdam)
