--- a/README
+++ b/README
@@ -6,7 +6,7 @@ https://en.wikipedia.org/wiki/Bram_Peper
 # anti-social behaviour
 https://en.wikipedia.org/wiki/Anti-social_behaviour
 
-# fuets
+# fiets
 https://nl.wikipedia.org/wiki/Fiets
 
 # voetpad
